--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 
 
-bl.innerHTML=" Max: "+out[out.length-1]+"<br>"+" Min: "+out[0]+"<br>"+" Sum: "+sum+"<br>"+" Average: "+avg+"<br>"+" Reverse order(After Sorted): "+revs;
+bl.innerHTML=" Max: "+out[out.length-1]+"<br>"+" Min: "+out[0]+"<br>"+" Sum: "+sum+"<br>"+" Average: "+avg+"<br>"+" Reverse order(After Sorted): "+out.reverse();
 
 
     }
